fix: change ChatFooter's z-index

--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -292,7 +292,7 @@
 @zindex-rate-actions: @zindex-modal;
 @zindex-navbar: 10;
 @zindex-quick-replies: 110;
-@zindex-footer: 10;
+@zindex-footer: 100;
 @zindex-notice: 30;
 
 @zindex-input-counter: 1;
